crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_function_nullabletypes.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "test",
          "params": [
            {
              "name": "bar",
              "type_hint": {
                "kind": {
                  "Nullable": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "Foo"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 22,
                          "end": 26
                        }
                      }
                    },
                    "span": {
                      "start": 22,
                      "end": 26
                    }
                  }
                },
                "span": {
                  "start": 21,
                  "end": 26
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 21,
                "end": 30
              }
            },
            {
              "name": "foo",
              "type_hint": {
                "kind": {
                  "Nullable": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 33,
                          "end": 39
                        }
                      }
                    },
                    "span": {
                      "start": 33,
                      "end": 39
                    }
                  }
                },
                "span": {
                  "start": 32,
                  "end": 39
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 32,
                "end": 44
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Nullable": {
                "kind": {
                  "Named": {
                    "parts": [
                      "Baz"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 49,
                      "end": 53
                    }
                  }
                },
                "span": {
                  "start": 49,
                  "end": 53
                }
              }
            },
            "span": {
              "start": 48,
              "end": 53
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 56
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 56
  }
}
